--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.0.1",
+    "@nestjs/swagger": "^5.1.4",
     "date-fns": "^2.25.0",
     "mongoose": "^6.0.11",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
